[package]
name = "spire-sieve"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# enum-iterator = { version = "1.4.1", default-features = false }
libgdx-xs128 = {version = "0.1.3", default-features = false }
strum = { version = "0.25.0", default-features = false }
strum_macros = { version = "0.25.0", default-features = false }

[features]
default = [
    "std",
    "libgdx-xs128/reroll",
    "libgdx-xs128/check_zero_seed"
]
std = [
    "strum/std",
    "libgdx-xs128/std"
]
tabulate_arithmetic = [] # todo!("tabulate d2 & d3 rolls in map gen")
